src/objects/DRE__DTE_Data__c.object
<CustomObject>
    <fields>
        <fullName>DRE__DTE_Data_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTE Data Set</label>
        <referenceTo>DRE__DTE_Data_Set__c</referenceTo>
        <relationshipLabel>Data</relationshipLabel>
        <relationshipName>DTE_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRE__DTE_Group__c</fullName>
        <label>DTE Data Group</label>
        <referenceTo>DRE__DTE_Data_Group__c</referenceTo>
        <relationshipLabel>Data</relationshipLabel>
        <relationshipName>DTE_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DTE Data</label>
    <nameField>
        <displayFormat>DTEDTA-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>